# helloworld

Proyecto_1/: pyproject.toml
Proyecto_1/helloworld/: db.sqlite3  urls.py
Proyecto_1/helloworld/helloworld/: settings.py
Proyecto_1/helloworld/pages/: views.py
helloworld/: db.sqlite3
helloworld/helloworld/: asgi.py  settings.py  urls.py  wsgi.py
helloworld/polls/: models.py
helloworld/polls/migrations/: 0001_initial.py
