[tool.poetry]
name = "helloworld-project"
version = "0.1.0"
description = ""
authors = ["Lucas Moreno <lumoco201617@gmail.com>"]
readme = "README.md"
packages = [{include = "helloworld_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
